@@ -1,5 +1,11 @@
 2013-07-07  Richard Sandiford  <rdsandiford@googlemail.com>
 
+	* config/tc-mips.c (mips_ip): Preserve the real bit number for "+p".
+	Require the msb to be <= 31 for "+s".  Check that the size is <= 31
+	for both "+s" and "+S".
+
+2013-07-07  Richard Sandiford  <rdsandiford@googlemail.com>
+
 	* config/tc-mips.c (validate_mips_insn, validate_micromips_insn):
 	(mips_ip, mips16_ip): Handle "+i".
 
